# bot-trade

forex-rl-dqn/: .env.example  .gitignore  API_CONSOLIDADA_GUIDE.md  ARCHITECTURE.md  CHANGES.md  CHECKLIST.md  COMMANDS.md  CONFIG_FEATURES_MAPPING.md  CTRADER_INTEGRATION.md  DASHBOARD_GUIDE.md  DEPLOYMENT.md  Dockerfile  ENHANCED_FEATURES.md  FINAL_STATUS.md  HYBRID_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INDEX_DOCUMENTATION.md  INGEST_API.md  LICENSE  OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.md  OPTIMIZED_FEATURES.md  PREDICTOR_CONFIDENCE_EXPLANATION.md  QUICKSTART.md  QUICKSTART_INGEST.md  QUICK_GUIDE_OPTIMIZATION.md  README.md  README_HYBRID.md  README_LIGHTGBM.md  README_MAIN.md  README_OPTIMIZED.md  STRUCTURE.md  SUMMARY.md  SYSTEM_SUMMARY.md  TRAINING_ANALYSIS.md  TRAINING_MONITORING.md  WINDOW_SIZE_TESTS.md  analyze_optimization.py  api_client_example.py  (+51 more)
forex-rl-dqn/.github/workflows/: ci.yml
forex-rl-dqn/artifacts/: config.yaml
forex-rl-dqn/frontend/: Dockerfile  history.html  index.html  nginx.conf
forex-rl-dqn/models/hybrid/: lightgbm_metrics_20251130_233751.yaml  lightgbm_model.txt  lightgbm_model_20251130_224243.metadata.pkl  lightgbm_model_20251130_224423.importance.csv  ppo_metrics_20251201_024751.yaml
forex-rl-dqn/models/hybrid_15m/: lightgbm_metrics_20251202_234539.yaml  lightgbm_metrics_20251211_003835.yaml  lightgbm_metrics_20251211_004750.yaml  lightgbm_metrics_20251211_004927.yaml  (+489 more)
forex-rl-dqn/src/: __init__.py
forex-rl-dqn/src/rl/: env.py  (+5 more)
forex-rl-dqn/tests/: __init__.py  test_api.py  test_env.py  test_features.py
(+2395 files in other folders)
